--- a/lang/en/help/lesson/retake.html
+++ b/lang/en/help/lesson/retake.html
@@ -7,10 +7,13 @@
     then the students should not be allowed to re-take the lesson.</p>
 
 <p>When the students are allowed to re-take the lesson, the <b>grades</b> shown 
-    in the Grades page are the grades from their <b>best</b> attempts of the lesson. 
-    However, the <b>Question Analysis</b> always uses the answers from the 
-    first attempts of the lesson, subsequent attempts are ignored.</p>
+    in the Grades page are either their <b>average</b> grade over the re-takes 
+    or their <b>best</b> grade for the lesson. The next parameter determines 
+    which of these two grading alternatives is used.</p>
+    
+<p>Note that the <b>Question Analysis</b> always uses the answers from the 
+    first tries of the lesson, subsequent re-takes by students are ignored.</p>
 
-<p>By default this option is <b>Yes</b>, meaning that students are allowed to re-take
-    the lesson. It is expected that only in exceptional circumstances will this
-    option be set to <b>No</b>.
+<p>By default this option is <b>Yes</b>, meaning that students are allowed to 
+    re-take the lesson. It is expected that only in exceptional circumstances
+    will this option be set to <b>No</b>.
