--- a/lang/en/help/lesson/nextpageaction.html
+++ b/lang/en/help/lesson/nextpageaction.html
@@ -5,7 +5,7 @@
     the lesson in a logical way, beginning at the start and ending at the end.</p>
     
 <p>However, the lesson module can also be used as a type of <i>Flash Card</i> assignment.
-    The student is show some information (optional) and a question in basically a random 
+    The student is shown some information (optional) and a question in basically a random 
     order. There is no set beginning and no set end. Just a set of <i>Cards</i> shown one after
     another in no particular order.</p>
     
