*** empty log message ***

--- a/lang/ca/help/courseavailability.html
+++ b/lang/ca/help/courseavailability.html
@@ -3,9 +3,7 @@
 
 <P>Aquesta opci&oacute; us permet <b>amagar</b> completament un curs.</p>
 
-<p>No pareixer&agrave; en cap llista de cursos excepte als professors del curs 
-  i als administradors.</p>
+<p>No apareixer&agrave; en cap llista de cursos, excepte per als professors del curs i per als administradors.</p>
 
-<p>Fins i tot, si els estudiants proven d'entrar al curs anant directament a la 
-  seva URL, no hi podran entrar.</p>
+<p>Fins i tot si els estudiants intenten accedir directament a l'URL del curs, no se'ls permetr&agrave; entrar-hi.</p>
 
