--- a/lang/ca/help/coursecategory.html
+++ b/lang/ca/help/coursecategory.html
@@ -1,9 +1,8 @@
 
-<P ALIGN=CENTER><B> Categories de cursos</B></P>
+<P ALIGN=CENTER><B>Categories de cursos</B></P>
 
-<P>L'administrador de Moodle pot haver creat diferents categories de cursos.
-<P>Per exemple &quot;Ci&egrave;ncies&quot;, &quot;Humanitats&quot;, &quot;Salut 
-  p&uacute;blica&quot;, etc.
-<P>Trieu una de les m&eacute;s adients al vostre curs. Aquesta tria afectar&agrave; 
-  al lloc on es mostra el vostre curs dins la Llista de cursos i pot facilitar 
-  als estudiants el fet de trobar-lo .
+<P>L'administrador de Moodle pot haver configurat diferents categories de cursos.</P>
+
+<P>Per exemple: &quot;Ci&egrave;ncies&quot;, &quot;Humanitats&quot;, &quot;Salut p&uacute;blica&quot;, etc.</P>
+
+<P>Trieu la m&eacute;s adequada al vostre curs. Aquesta elecci&oacute; afectar&agrave; el lloc on es mostra el vostre curs dins de la llista de cursos i pot facilitar als estudiants de trobar-lo.</P>
