--- a/lang/ca/help/coursefullname.html
+++ b/lang/ca/help/coursefullname.html
@@ -1,6 +1,4 @@
-
 <P ALIGN=CENTER><B>Nom complet del curs</B></P>
 
-<P>El nom complet del curs es mostra al capdemunt de la pantalla i a les llistes 
-  de cursos.</P>
+<P>El nom complet del curs es mostra al capdamunt de la pantalla i a les llistes de cursos.</P>
 
