--- a/lang/ca/help/coursegrades.html
+++ b/lang/ca/help/coursegrades.html
@@ -1,13 +1,7 @@
+<p align="center"><b>Qualificacions</b></p>
 
-<p align="center"><b>Notes o qualificacions</b></p>
+<P>Moltes activitats poden ser qualificades.</p>
 
-<P>Algunes activitats permeten obtenir una nota o qualificaci&oacute;. </p>
+<p>Per defecte, els resultats de totes les qualificacions del curs es poden veure a la p&agrave;gina de Qualificacions, disponible des de la p&agrave;gina principal del curs. </p>
 
-<p>Per defecte, els resultats de totes les notes del curs es poden veure a la 
-  p&agrave;gina Notes accessible des de la p&agrave;gina principal del curs. </p>
-
-<p>Si el professorat no est&agrave; interessat en posar qualificacions al seu 
-  curs, o nom&eacute;s vol amagar les notes a la vista dels estudiants, podr&agrave; 
-  desactivar l'opci&oacute; Notes a la Configuraci&oacute; del curs. Tanmateix 
-  aix&ograve; no impedir&agrave; que les activitats individuals tinguin una nota, 
-  nom&eacute;s desactiva la possibilitat que els estudiants vegin els resultats.</p>
+<p>Si el professor no vol fer serveir qualificacions en el seu curs, o vol ocultar les qualificacions als estudiants, pot inhabilitar la visualitzaci&oacute; de les qualificacions en els Par&agrave;metres del configuraci&oacute; del curs. Aix&ograve; no impedeix qualificar cada activitat, simplement inhabilita la la visualitzaci&oacute; dels resultats pels estudiants.</p>
