--- a/lang/ca/help/coursenewsitems.html
+++ b/lang/ca/help/coursenewsitems.html
@@ -1,13 +1,7 @@
-
 <P ALIGN=CENTER><B>Nombre de not&iacute;cies del curs</B></P>
 
-<P>En els formats de curs &quot;setmanal&quot; i per &quot;temes&quot; apareix 
-  un f&ograve;rum especial anomenat &quot;Not&iacute;cies&quot; . &Eacute;s un 
-  bon lloc per publicar els avisos que hagin de veure els estudiants. Per defecte 
-  tots els estudiants estan subscrits a aquest f&ograve;rum i rebran les not&iacute;cies 
-  per correu electr&ograve;nic.
-<P>Aquesta opci&oacute; determina el nombre de not&iacute;cies que apareixeran 
-  a la p&agrave;gina d'inici del curs al requadre de not&iacute;cies de m&agrave; 
-  dreta.
-<P>Si deixeu l'opci&oacute; a &quot;0 not&iacute;cies&quot; aleshores no apareixer&agrave; 
-  el requadre.
+<P>En els formats de curs &quot;setmanal&quot; i per &quot;temes&quot; apareix un f&ograve;rum especial anomenat &quot;Not&iacute;cies&quot;. &Eacute;s un bon lloc per publicar els avisos que hagin de veure tots els estudiants. Per defecte tots els estudiants estan subscrits a aquest f&ograve;rum i reben els avisos per correu electr&ograve;nic.</P>
+
+<P>Aquest par&agrave;metre determina quants &iacute;tems apareixen a la p&agrave;gina inicial del curs, en un quadre de not&iacute;cies a la banda dreta.</P>
+
+<P>Si poseu &quot;0 not&iacute;cies&quot; aleshores no apareixer&agrave; el quadre de not&iacute;cies.</P>
