--- a/lang/ca/help/courserecent.html
+++ b/lang/ca/help/courserecent.html
@@ -1,14 +1,9 @@
-
 <P ALIGN=CENTER><B>Activitat recent</B></P>
 
-<P>Moodle pot mostrar l'activitat recent a la p&agrave;gina inicial del curs. 
-<P>Es mostrar&agrave; tot all&ograve; que ha succe&iuml;t al curs des de la darrera 
-  vegada que l'usuari va entrar al curs, incloent les noves entrades a f&ograve;rums, 
-  usuaris nous, diaris tramesos, etc.
-<p>&Eacute;s molt recomanable que deixeu activada aquesta opci&oacute; als cursos 
-  perqu&egrave; contribueix a donar un sentit d'activitat a la marxa del curs. 
-  El fet se saber el que est&agrave; fent la resta de participants ajuda a promoure 
-  una atmosfera col&middot;laborativa a la classe.</p>
-<P>En cursos d e molta activitat pot ser convenient deshabilitar aquesta opci&oacute; 
-  per ser extremadament llarga i perqu&egrave; pot alentir la desc&agrave;rrega 
-  de la p&agrave;gina.
+<P>Moodle pot visualitzar l'&quot;activitat recent&quot; a la p&agrave;gina principal del curs.</p>
+
+<P>Aix&ograve; mostra tot el que s'hagi esdevingut en el curs des de la darrera entrada de l'usuari, inclosos els missatges nous dels f&ograve;rums, usuaris nous, diaris tramesos, etc.</P>
+
+<p>&Eacute;s molt recomanable que deixeu habilitada aquesta caracter&iacute;stica en els vostres cursos, ja que ajuda a donar una idea de l'activitat del curs. Saber el que estan fent els altres tamb&eacute; ajuda a promoure una atmosfera de col&middot;laboraci&oacute; en la classe.</p>
+
+<P>En cursos que tinguin molta activitat potser s&iacute; que voldreu inhabilitar aquesta opci&oacute;, ja que pot alentir la visualitzaci&oacute; de la p&agrave;gina principal del curs.</P>
