--- a/lang/ca/help/courseshortname.html
+++ b/lang/ca/help/courseshortname.html
@@ -1,7 +1,3 @@
-
 <P ALIGN=CENTER><B>Nom curt del curs</B></P>
 
-<P>Algunes institucions tenen una forma abreujada de referir-se als cursos, com 
-  ara BP102 o OKB9. Encara que no utilitzeu aquest nom feu-ho ara. S'utilitzar&agrave; 
-  en diferents llocs on el nom complet no &eacute;s apropiat, com ara a la l&iacute;nia 
-  d'assumpte d'un missatge de correu.</P>
+<P>Moltes institucions tenen una forma abreujada de referir-se als cursos, amb un codi com ara BP102 o OKB9. Encara que no utilitzeu aquest tipus de codis, poseu-ne un ara. S'utilitzar&agrave; en diferents llocs on el nom complet no resulta adequat (per exemple en la l&iacute;nia d'assumpte d'un correu electr&ograve;nic).</P>
