--- a/lang/ca/help/coursestartdate.html
+++ b/lang/ca/help/coursestartdate.html
@@ -1,15 +1,11 @@
-
 <P ALIGN=CENTER><B>Data d'inici del curs</B></P>
 
-<P>Aqu&iacute; &eacute;s on heu d'especificar la data d'inici del curs (en la 
-  vostra zona hor&agrave;ria).
-<P>Si utilitzeu el format setmanal de curs afectar&agrave; a la forma com es mostren 
-  les setmanes. La primera setmana comen&ccedil;ar&agrave; en la data que poseu 
-  aqu&iacute;.
-<P>Aquesta opci&oacute; no afecta als cursos que utilitzen els formats de &quot;temes&quot; 
-  o &quot;social&quot;.
-<P>Tanmateix aquesta opci&oacute; afectar&agrave; la manera com es mostren els 
-  informes perqu&egrave; s'utilitza aquesta data d'inici com la m&eacute;s propera 
-  que es pot mostrar
-<P>En general, si el vostre curs t&eacute; una data d'inici real aleshores &eacute;s 
-  convenient posar-la prescindint del tipus de format de curs que hagueu triat.
+<P>Aqu&iacute; &eacute;s on especifiqueu la data d'inici del curs.</P>
+
+<P>Si utilitzeu el format setmanal de curs, aix&ograve; afectar&agrave; la visualitzaci&oacute; de les setmanes. La primera setmana comen&ccedil;ar&agrave; en la data que poseu aqu&iacute;.</P>
+
+<P>Aquest par&agrave;metre no afecta els cursos que utilitzen els formats per temes o social.</P>
+
+<P>En tot cas aquest par&agrave;metre afectar&agrave; la visualitzaci&oacute; dels registres, que utilitzaran aquesta data d'inici com la m&eacute;s antiga que es pot veure.</P>
+
+<P>En general, si el vostre curs t&eacute; una data d'inici real aleshores poseu-la aqu&iacute; independentment del format de curs que esteu utilitzant.</P>
