--- a/lang/ca/help/courseformats.html
+++ b/lang/ca/help/courseformats.html
@@ -1,26 +1,18 @@
-
-<P ALIGN=CENTER><B>Formats de curs Moodle </B></P>
+<P ALIGN=CENTER><B>Formats de curs de Moodle</B></P>
 
 <P><B>Format setmanal</B></P>
+
 <UL>
-  <p>El curs s'organitza setmana per setmana amb unes clares dates d'inici i de 
-    finalitzaci&oacute;. Cada setmana hi ha activitats per fer. Algunes, com ara 
-    els diaris, poden tenir apla&ccedil;ament fins a, posem, dues setmanes abans 
-    de deixar de poder-se fer.</p>
+  <p>El curs s'organitza per setmanes, amb unes dates clares d'inici i de finalitzaci&oacute;. Cada setmana consta d'activitats. Algunes d'aquestes, com ara els diaris, poden tenir una pr&ograve;rroga, per exemple de dues setmanes, despr&eacute;s de la qual ja no estan disponibles.</p>
 </UL>
 
 <P><B>Format per temes</B></P>
 <UL>
-  <p>Molt similar al format setmanal excepte en el fet que cada &quot;setmana&quot; 
-    aqu&iacute; s'anomena &quot;tema&quot;. Un &quot;tema&quot; no queda restringit 
-    a cap limitaci&oacute; de temps, aix&iacute; que no cal especificar dates.</p>
+  <p>Molt semblant al format setmanal, tret que les &quot;setmanes&quot; aqu&iacute; es diuen &quot;temes&quot;. Un &quot;tema&quot; no t&eacute; l&iacute;mits temporals. No cal especificar dates.</p>
 </UL>
 
 <P><B>Format social</B></P>
 <UL>
-  <p>Aquest format s'orienta al voltant d'un f&ograve;rum principal, el f&ograve;rum 
-    Social, que apareix a la p&agrave;gina d'inici. &Eacute;s &uacute;til per 
-    a situacions m&eacute;s informals, no cal ni que siguin cursos. Per exemple, 
-    es pot utilitzar com a tauler d'anuncis d'un departament.</p>
+  <p>Aquest format s'orienta al voltant d'un f&ograve;rum principal, el f&ograve;rum Social, que ocupa la p&agrave;gina principal. &Eacute;s &uacute;til en situacions m&eacute;s informals. No cal ni que siguin cursos. Per exemple, es podria fer servir com a tauler d'anuncis d'un departament.</p>
 </UL>
 
