--- a/lang/ca/help/coursenumsections.html
+++ b/lang/ca/help/coursenumsections.html
@@ -1,10 +1,9 @@
-
 <P ALIGN=CENTER><B>Nombre de setmanes/temes del curs</B></P>
 
-<P>Aquesta opci&oacute; nom&eacute;s es pot usar en els formats de curs per &quot;setmanes&quot; 
-  o per &quot;temes&quot;.
-<P>Al format setmanal especifica el nombre de setmanes que durar&agrave; el curs 
-  a partir de la data d'inici.
-<P>Al format per &quot;temes&quot; especifica el nombre de temes del curs.
-<P>En qualsevol cas crea el nombre de requadres necessari al mig de la p&agrave;gina 
-  d'inici del curs.
+<P>Aquest par&agrave;metre nom&eacute;s s'utilitza en els formats de curs &quot;setmanal&quot; i per &quot;temes&quot;.</P>
+
+<P>En el format setmanal, especifica el nombre de setmanes que durar&agrave; el curs a partir de la data d'inici.</P>
+  
+<P>En el format per &quot;temes&quot;, especifica el nombre de temes del curs.</P>
+
+<P>En tots dos casos, aix&ograve; es tradueix en el nombre de &quot;quadres&quot; que es creen a la part central de la p&agrave;gina principal curs.</P>
