*** empty log message ***

--- a/lang/ca/help/emoticons.html
+++ b/lang/ca/help/emoticons.html
@@ -1,4 +1,3 @@
-
 <P ALIGN=CENTER><B>Emoticones</B></P>
 
 <table border="1" align="center">
@@ -12,7 +11,7 @@
     </tr>
     <tr>
       <td><a href="javascript:inserttext(':-D')"><img alt border="0" hspace="10" src="pix/s/biggrin.gif" width="15" height="15"></a></td>
-          <td>riallada</td>
+          <td>rialla</td>
       <td><font face="courier">:-D</font></td>
     </tr>
     <tr>
@@ -32,7 +31,7 @@
     </tr>
     <tr>
       <td><a href="javascript:inserttext(':-P')"><img alt border="0" hspace="10" src="pix/s/tongueout.gif" width="15" height="15"></a></td>
-          <td>treure la llengua</td>
+          <td>burleta</td>
       <td><font face="courier">:-P</font></td>
     </tr>
     <tr>
@@ -76,7 +75,7 @@
     </tr>
     <tr>
       <td><a href="javascript:inserttext(':-X')"><img alt border="0" hspace="10" src="pix/s/kiss.gif" width="15" height="15"></a></td>
-          <td>petons</td>
+          <td>pet&oacute;</td>
       <td><font face="courier">:-X</font></td>
     </tr>
     <tr>
@@ -101,7 +100,7 @@
     </tr>
     <tr>
       <td><a href="javascript:inserttext('|-.')"><img alt border="0" hspace="10" src="pix/s/sleepy.gif" width="15" height="15"></a></td>
-          <td>adormit</td>
+          <td>somnolent</td>
       <td><font face="courier">|-.</font></td>
     </tr>
     <tr>
@@ -112,11 +111,9 @@
     </table>
 </table>
 
-<P>Quan s'escriu a Internet a vegades &eacute;s dif&iacute;cil expressar les emocions 
-  nom&eacute;s amb text. Aquestes icones hi poden ajudar.
-<p>Per inserir-les al text nom&eacute;s cal que cliqueu sobre la icona o b&eacute; 
-  escriviu directament al vostre escrit els car&agrave;cters de text associats 
-  a cada icona .</p>
-<P>Fixeu-vos que els propis car&agrave;cters fan un dibuixet: gireu el cap cap 
-  a l'esquerra per veure'ls.</P>
+<P>Quan s'escriu a Internet de vegades &eacute;s dif&iacute;cil expressar emocions nom&eacute;s amb text. Aquestes petites icones hi poden ajudar.</P>
+
+<P>Per inserir-les al text nom&eacute;s cal que feu clic sobre la icona aqu&iacute; dalt o b&eacute; teclegeu al vostre escrit els car&agrave;cters de text associats a la icona.</P>
+
+<P>Fixeu-vos que els car&agrave;cters mateixos s&oacute;n com un dibuixet: tombeu el cap a l'esquerra per veure'ls.</P>
 
