--- a/lang/ca/help/enrolmentkey.html
+++ b/lang/ca/help/enrolmentkey.html
@@ -1,16 +1,11 @@
-<P ALIGN=CENTER><B>Clau d'inscripció als cursos</B></P>
+<P ALIGN=CENTER><B>Clau d'inscripci&oacute; del curs</B></P>
 
-<P>Una Clau d'inscripci&oacute;a un curs és allò que manté fora d'un curs a les 
-  persones no autoritzades 
-<P>Si ho deixeu en blanc aleshores qualsevol que pugui  crear un compte d'usuari Moodle en aquest lloc 
-serà capaç d'inscriure's en un dels vostres cursos simplement entrant-hi.
+<P>La Clau d'inscripci&oacute;a del curs mant&eacute; fora del curs a les persones no autoritzades.</P>
+  
+<P>Si deixeu en blanc aquest camp, aleshores qualsevol persona que tingui o es cre&iuml; un compte d'usuari en aquest Moodle podr&agrave; inscriure's al curs simplement entrant-hi.</P>
 
-<P>Si hi escriviu alguna cosa aleshores se'ls hi demanarà als estudiants que proven 
-  d'entrar-hi que escriguin aquest text però NOMÉS LA PRIMERA VEGADA 
-<P>La idea és que simplement doneu la Clau a les persones autoritzades per altres mitjans, com ara un missatge de correu privat,m
-correu ordinari, per telèfon o, fins i tot, verbalment en una classe presencial.
+<P>Si empleneu aquest camp, aleshores als estudiants que proven d'entrar al curs se'ls demanar&agrave; que donen aquesta paraula o frase, per&ograve; NOM&Eacute;S LA PRIMERA VEGADA.</P> 
 
-<P>Si aquesta Clau s'escampa i algunes persones no autoritzades s'inscriuen aleshores 
-  podeu anul·lar llurs inscripcions a través de la pàgina de Perfils d'usuari 
-  i canviar la Clau. Cap dels estudiants leg&iacute;timament autoritzats no es 
-  veurà afectat però les persones no desitjades ja no hi podran tornar a entrar. 
+<P>La idea &eacute;s que doneu la clau a les persones autoritzades per mitj&agrave; d'un correu privat, per correu postal, per tel&egrave;fon o fins i tot verbalment en una classe presencial.</P>
+
+<P>Si aquesta clau s'escampa i algunes persones no autoritzades s'inscriuen al curs, sempre podeu anul&middot;lar la seva inscripci&oacute; (vg. la p&agrave;gina de perfil de l'usuari) i canviar la clau. Aix&ograve; no afectar&agrave; els estudiants ja inscrits, per&ograve; impedir&agrave; que els expulsats tornin a entrar-hi.</P>
