--- a/lang/ca/help/guestaccess.html
+++ b/lang/ca/help/guestaccess.html
@@ -1,21 +1,11 @@
+<P ALIGN=CENTER><B> Acc&eacute;s de visitants</B></P>
 
-<P ALIGN=CENTER><B> Acc&eacute;s d'invitats</B></P>
+<P>Teniu l'opci&oacute; de permetre &quot;visitants&quot; en el vostre curs.</P>
 
-<P>Teniu la possibilitat de permetre que els &quot;invitats&quot; entrin als vostres 
-  cursos.
-<P>Es pot entrar com a invitat usant el bot&oacute; &quot;Entrar com a invitat&quot; 
-  a la p&agrave;gina d'entrada.
-<P>Els invitats SEMPRE tenen un nivell d'acc&eacute;s de &quot;nom&eacute;s lectura&quot;, 
-  el que significa que no poden deixar missatges o enredar el curs dels estudiants 
-  reals.
-<P>Aix&ograve; pot ser &uacute;til si voleu que un col&middot;lega entri a fer 
-  un cop d'ull al vostre treball o tamb&eacute; per permetre que els estudiants 
-  vegin com va un curs abans de decidir-se a inscriure-s'hi.
-<P>Fixeu-vos que teniu una opci&oacute; entre dues possibles per donar acc&eacute;s 
-  als invitats: amb clau d'inscripci&oacute; o sense. Si escolliu que entrin amb 
-  la Clau aleshores els invitats l'hauran d'escriure CADA VEGADA que vulguin entrar, 
-  a difer&egrave;ncia dels estudiants que nom&eacute;s l'han d'entrar un cop. 
-  Aix&ograve; us permetr&agrave; restringir els permisos d'acc&eacute;s dels invitats. 
-  Per&ograve; si escolliu permetre l'entrada sense clau aleshores qualsevol podr&agrave; 
-  entrar al vostre curs.
-<P>&nbsp;
+<P>La gent pot entrar com a visitant per mitj&agrave; del bot&oacute; &quot;Entra com a visitant&quot; de la p&agrave;gina d'entrada.</P>
+
+<P>Els invitats SEMPRE tenen un nivell d'acc&eacute;s &quot;nom&eacute;s de lectura&quot;, la qual cosa significa que no poden deixar missatges o enredar el curs als estudiants reals.</P>
+
+<P>Aquesta opci&oacute; pot ser &uacute;til si voleu que un col&middot;lega entri a donar un cop d'ull al vostre treball o tamb&eacute; per deixar que els estudiants vegin un curs abans de decidir-se a inscriure-s'hi.</P>
+
+<P>Fixeu-vos que podeu triar dos tipus d'acc&eacute;s per als visitants: amb clau d'inscripci&oacute; o sense. Si trieu que hagin d'entrar amb la clau, aleshores els visitants l'hauran de teclejar CADA VEGADA que entrin (els estudiants de deb&ograve; nom&eacute;s cal que ho facin la primera vegada). D'aquesta manera podeu limitar quins invitats entren. Per&ograve; si trieu permetre l'entrada de visitants sense clau, aleshores qualsevol persona podr&agrave; entrar directament al vostre curs.</P>
