--- a/lang/ca/help/html.html
+++ b/lang/ca/help/html.html
@@ -1,13 +1,13 @@
+<P ALIGN=CENTER><B>Ajuda per a escriure HTML</B></P>
 
-<P ALIGN=CENTER><B>Ajuda per escriure codi HTML</B></P>
+<P>Quan escriviu HTML en Moodle sou lliures d'utilitzar gaireb&eacute; qualsevol etiqueta HTML per produir l'efecte que vulgueu.</P>
 
-<P>Quan a Moodle escriviu codi HTML podeu usar l'etiqueta html que vulgueu per 
-  produir l'efecte que desitgeu.
-<P>El codi normalment &eacute;s impr&egrave;s a la p&agrave;gina a la cel&middot;la 
-  d'una taula, aix&iacute;:
+<P>Teniu en compte que les seq&uuml;&egrave;ncies Javascript, VB Script o altres, no s&oacute;n permeses i s'eliminaran autom&agrave;ticament.</P>
+
+<p>Moodle normalment inclour&agrave; el vostre codi dins d'una cel&middot;la cel&middot;la d'una taula, de manera que:</P>
 <UL>
-  <LI>no cal que useu les etiquetes &lt;HEAD> ni &lt;BODY> 
-  <LI>fixeu-vos b&eacute; amb les etiquetes &lt;/TABLE> no aparellades perqu&egrave; 
-    produiran alteracions en la disposici&oacute; de la p&agrave;gina. 
+  <LI>No cal que useu les etiquetes &lt;HEAD> ni &lt;BODY>.
+  <LI>Pareu molt de compte en les etiquetes &lt;/TABLE> per no enredar la visualitzaci&oacute; de la p&agrave;gina.
 </UL>
 
+</P>Les emoticones es transformaran en el seu equivalent gr&agrave;fic, i els URL es transformaran en enlla&ccedil;os.</P>
