--- a/lang/ca/help/index.html
+++ b/lang/ca/help/index.html
@@ -1,35 +1,37 @@
-
-<p><b>&Iacute;ndex dels arxius d'ajuda</b></p>
+<p><b>&Iacute;ndex dels fitxers d'ajuda</b></p>
 
 <p>General</p>
 <ul>
-  <li><a href="help.php?file=cookies.html">Galetes o cookies</a> 
+  <li><a href="help.php?file=cookies.html">Galetes</a> 
 </ul>
 
 <p>Administraci&oacute;</p>
 <ul>
-  <li><a href="help.php?file=langedit.html">Edició de l'idioma</a> 
+  <li><a href="help.php?file=langedit.html">Edici— de l'idioma</a> 
+  <li><a href="help.php?file=uploadusers.html">Cˆrrega d'usuaris</a> 
 </ul>
 
 <p>Configuraci&oacute; de cursos</p>
 <ul>
-  <li><a href="help.php?file=mods.html">Mòduls d'activitat</a> 
+  <li><a href="help.php?file=mods.html">M˜duls d'activitat</a> 
+  <li><a href="help.php?file=coursereports.html">Informes d'activitat</a>
   <li><a href="help.php?file=courseavailability.html">Disponibilitat d'un curs</a> 
   <li><a href="help.php?file=coursecategory.html">Categories de cursos</a> 
   <li><a href="help.php?file=courseformats.html">Formats de curs</a> 
-  <li><a href="help.php?file=coursefullname.html">Nom sencer del curs</a> 
-  <li><a href="help.php?file=coursenewsitems.html">Nombre de notícies d'un curs</a> 
+  <li><a href="help.php?file=coursefullname.html">Nom complet del curs</a> 
+  <li><a href="help.php?file=coursenewsitems.html">Nombre de not’cies del curs</a> 
   <li><a href="help.php?file=coursenumsections.html">Nombre de setmanes o temes d'un curs</a> 
   <li><a href="help.php?file=courseshortname.html">Nom curt del curs</a> 
   <li><a href="help.php?file=coursestartdate.html">Data d'inici del curs</a> 
-  <li><a href="help.php?file=enrolmentkey.html">Clau d'inscripció als cursos</a> 
-  <li><a href="help.php?file=coursegrades.html">Notes</a> 
-  <li><a href="help.php?file=guestaccess.html">Accés d'invitats</a> 
+  <li><a href="help.php?file=courseuploadsize.html">Mida dels fitxers del curs</a> 
+  <li><a href="help.php?file=enrolmentkey.html">Clau d'inscripci— del curs</a> 
+  <li><a href="help.php?file=coursegrades.html">Qualificacions</a> 
+  <li><a href="help.php?file=guestaccess.html">AccŽs de visitants</a> 
   <li><a href="help.php?file=courserecent.html">Activitat recent</a> 
   <li><a href="help.php?file=scales.html">Escales</a> 
-  <li><a href="help.php?file=summaries.html">Resums de Tema/Setmana</a> 
+  <li><a href="help.php?file=summaries.html">Resums de seccions</a> 
   <li><a href="help.php?file=teachers.html">Professors</a> 
-  <li><a href="help.php?file=picture.html">Càrrega d'imatges</a> 
+  <li><a href="help.php?file=picture.html">Penjar una imatge</a> 
 </ul>
 
 <p>Llegir i escriure</p>
@@ -41,6 +43,6 @@
   <li><a href="help.php?file=html.html">Editar format HTML</a> 
   <li><a href="help.php?file=text.html">Editar format de text</a> 
   <li><a href="help.php?file=wiki.html">Editar format Wiki</a> 
-  <li><a href="help.php?file=richtext.html">Usar l'editor de text enriquit HTML</a> 
-  <li><a href="help.php?file=emoticons.html">Usar les emoticones</a> 
+  <li><a href="help.php?file=richtext.html">Utilitzar l'editor de text enriquit HTML</a> 
+  <li><a href="help.php?file=emoticons.html">Utilitzar les emoticones</a> 
 </ul>
