--- a/lang/ca/help/text.html
+++ b/lang/ca/help/text.html
@@ -1,14 +1,10 @@
+<P ALIGN=CENTER><B>Ajuda per a escriure de text</B></P>
 
-<P ALIGN=CENTER><B>Ajuda en l'escriptura de text</B></P>
+Escriure text en Moodle &eacute;s tan senzill com aix&ograve;, per&ograve; tamb&eacute; teniu  algunes possibilitats addicionals com ara incloure emoticones, adreces URL i algunes etiquetes HTML.
 
-Escriure text a Moodle funciona de la manera que espereu, per&ograve; teniu, a 
-m&eacute;s, la possibilitat d'escriure emoticones, adreces URL i algunes etiquetes 
-HTML. 
 <P><B>Emoticones</B></P>
 <UL>
-  <P>Per incloure aquestes petites icones al text nom&eacute;s cal que escriviu 
-    el codi associat. Els propis codis s&oacute;n com dibuixets si els mireu girant 
-    el cap a l'esquerra. </P>
+  <P>Per incrustar aquestes petites icones al text nom&eacute;s cal que teclegeu el codi associat. Els codis mateixos s&oacute;n com dibuixets si els mireu tombant el cap a l'esquerra.</P>
   <table border="1" align="center">
     <tr valign="top"> 
       <td> 
@@ -20,7 +16,7 @@ HTML.
           </tr>
           <tr> 
             <td><a href="javascript:inserttext(':-D')"><img alt border="0" hspace="10" src="pix/s/biggrin.gif" width="15" height="15"></a></td>
-            <td>riallada</td>
+            <td>rialla</td>
             <td><font face="courier">:-D</font></td>
           </tr>
           <tr> 
@@ -40,7 +36,7 @@ HTML.
           </tr>
           <tr> 
             <td><a href="javascript:inserttext(':-P')"><img alt border="0" hspace="10" src="pix/s/tongueout.gif" width="15" height="15"></a></td>
-            <td>treure la llengua</td>
+            <td>burleta</td>
             <td><font face="courier">:-P</font></td>
           </tr>
           <tr> 
@@ -84,7 +80,7 @@ HTML.
           </tr>
           <tr> 
             <td><a href="javascript:inserttext(':-X')"><img alt border="0" hspace="10" src="pix/s/kiss.gif" width="15" height="15"></a></td>
-            <td>petons</td>
+            <td>pet&oacute;</td>
             <td><font face="courier">:-X</font></td>
           </tr>
           <tr> 
@@ -109,7 +105,7 @@ HTML.
           </tr>
           <tr> 
             <td><a href="javascript:inserttext('|-.')"><img alt border="0" hspace="10" src="pix/s/sleepy.gif" width="15" height="15"></a></td>
-            <td>adormit</td>
+            <td>somnolent</td>
             <td><font face="courier">|-.</font></td>
           </tr>
           <tr> 
@@ -123,19 +119,17 @@ HTML.
 
 <P><B>Enlla&ccedil;os</B></P>
 <UL>
-  <P>Qualsevol text que comenci per <B>www.</B> o per <B>http://</B> autom&agrave;ticament 
-    es convertir&agrave; en un enlla&ccedil; on poder clicar. 
-  <P>Per exemple: <A HREF="http://www.yahoo.com">www.yahoo.com</A> o <A HREF="http://curtin.edu">http://www.xtec.es/~jqueralt</A> 
+  <P>Qualsevol text que comenci per <B>www.</B> o per <B>http://</B> es convertir&agrave; autom&agrave;ticament en un enlla&ccedil; on poder fer clic.
+  <P>Per exemple: <A HREF="http://www.google.com">www.google.com</A> o <A HREF="http://moodle.org">http://moodle.org</A> 
 </UL>
 
 <P><B>Etiquetes HTML</B></P>
 <UL>
-  <P>Podeu usar un redu&iuml;t joc d'etiquetes HTML per donar &egrave;mfasi als 
-    textos: 
+  <P>Podeu utilitzar un joc redu&iuml;t d'etiquetes HTML per donar &egrave;mfasi als textos: 
   <TABLE BORDER=0 CELLPADDING=5 CELLSPACING=5>
     <TR> 
-      <TH>Etiquetes HTML 
-      <TH>Produeixen 
+      <TH>Etiqueta HTML 
+      <TH>Produeix 
     </TR>
     <TR> 
       <TD>&lt;B> text en negreta&lt;/B> 
