--- a/lang/ca/help/courseuploadsize.html
+++ b/lang/ca/help/courseuploadsize.html
@@ -1,4 +1,4 @@
-<P ALIGN=CENTER><B>Mida de c&agrave;rrega del curs</B></P>
+<P ALIGN=CENTER><B>Mida dels fitxers del curs</B></P>
 
 <P>Aquest par&agrave;metre defineix la mida m&agrave;xima dels fitxers que poden penjar els estudiants en aquest curs (l'administrador defineix un l&iacute;mit m&agrave;xim v&agrave;lid per a tot el lloc).
 
